--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,7 @@
 # Menu navigation links
 
-- title: Important Link
-  url: http://momspaghetti.ytmnd.com/
+- title: Theme Setup
+  url: /theme-setup/
+
+- title: External Link
+  url: http://mademistakes.com
