--- a/_members/Emenius Sleepus.yml
+++ b/_members/Emenius Sleepus.yml
@@ -1,21 +1,22 @@
 ---
-:name: Emenius Sleepus
-:curr_health: '8764'
-:curr_power: '1344'
-:health: '8764'
-:level: '30'
-:power: '3235'
-:defense: '5728'
-:tough: '120'
-:might: '3591'
-:precision: '1026'
-:restoration: '3171'
-:vital: '649'
-:dominance: '163'
-:skill: '38'
-:origin: Magic
-:movement: Super-Speed
-:gender: male
-:personality: Flirty
-:id: '562975726340855'
-:mentor: Wonder Woman
+name: Emenius Sleepus
+curr_health: '8764'
+curr_power: '1344'
+health: '8764'
+level: '30'
+power: '3235'
+defense: '5728'
+tough: '120'
+might: '3591'
+precision: '1026'
+restoration: '3171'
+vital: '649'
+dominance: '163'
+skill: '38'
+origin: Magic
+movement: Super-Speed
+gender: male
+personality: Flirty
+id: '562975726340855'
+:mentor: Superman
+---
