--- a/_members/Izzer.yml
+++ b/_members/Izzer.yml
@@ -1,21 +1,22 @@
 ---
-:name: Izzer
-:curr_health: '7550'
-:curr_power: '2510'
-:health: '7550'
-:level: '30'
-:power: '2510'
-:defense: '6521'
-:tough: '120'
-:might: '3344'
-:precision: '811'
-:restoration: '2347'
-:vital: '496'
-:dominance: '285'
-:skill: '31'
-:origin: Tech
-:movement: Acrobatics
-:gender: male
-:personality: Primal
-:id: '562975726182755'
-:mentor: Batman
+name: Izzer
+curr_health: '7550'
+curr_power: '2510'
+health: '7550'
+level: '30'
+power: '2510'
+defense: '6521'
+tough: '120'
+might: '3344'
+precision: '811'
+restoration: '2347'
+vital: '496'
+dominance: '285'
+skill: '31'
+origin: Tech
+movement: Acrobatics
+gender: male
+personality: Primal
+id: '562975726182755'
+:mentor: Superman
+---
