--- a/_members/MetaRed187.yml
+++ b/_members/MetaRed187.yml
@@ -1,21 +1,22 @@
 ---
-:name: MetaRed187
-:curr_health: '9851'
-:curr_power: '3862'
-:health: '9851'
-:level: '30'
-:power: '4008'
-:defense: '8427'
-:tough: '200'
-:might: '5387'
-:precision: '1687'
-:restoration: '3463'
-:vital: '1335'
-:dominance: '56'
-:skill: '58'
-:origin: Meta
-:movement: Flight
-:gender: male
-:personality: Powerful
-:id: '562962840348225'
+name: MetaRed187
+curr_health: '9851'
+curr_power: '3862'
+health: '9851'
+level: '30'
+power: '4008'
+defense: '8427'
+tough: '200'
+might: '5387'
+precision: '1687'
+restoration: '3463'
+vital: '1335'
+dominance: '56'
+skill: '58'
+origin: Meta
+movement: Flight
+gender: male
+personality: Powerful
+id: '562962840348225'
 :mentor: Superman
+---
