--- a/_members/Sasha Sprite.yml
+++ b/_members/Sasha Sprite.yml
@@ -1,21 +1,22 @@
 ---
-:name: Sasha Sprite
-:curr_health: '18695'
-:curr_power: '6866'
-:health: '18695'
-:level: '30'
-:power: '6866'
-:defense: '15624'
-:tough: '440'
-:might: '11884'
-:precision: '3974'
-:restoration: '5761'
-:vital: '2638'
-:dominance: '58'
-:skill: '165'
-:origin: Tech
-:movement: Acrobatics
-:gender: female
-:personality: Flirty
-:id: '562980020912551'
-:mentor: Batman
+name: Sasha Sprite
+curr_health: '18695'
+curr_power: '6866'
+health: '18695'
+level: '30'
+power: '6866'
+defense: '15624'
+tough: '440'
+might: '11884'
+precision: '3974'
+restoration: '5761'
+vital: '2638'
+dominance: '58'
+skill: '165'
+origin: Tech
+movement: Acrobatics
+gender: female
+personality: Flirty
+id: '562980020912551'
+:mentor: Superman
+---
