--- a/_members/Toom Lantern.yml
+++ b/_members/Toom Lantern.yml
@@ -1,21 +1,22 @@
 ---
-:name: Toom Lantern
-:curr_health: '13379'
-:curr_power: '4902'
-:health: '13379'
-:level: '30'
-:power: '4902'
-:defense: '12072'
-:tough: '0'
-:might: '7443'
-:precision: '2571'
-:restoration: '4539'
-:vital: '1740'
-:dominance: '96'
-:skill: '60'
-:origin: Magic
-:movement: Flight
-:gender: male
-:personality: Powerful
-:id: '562984316104460'
-:mentor: Wonder Woman
+name: Toom Lantern
+curr_health: '13379'
+curr_power: '4902'
+health: '13379'
+level: '30'
+power: '4902'
+defense: '12072'
+tough: '0'
+might: '7443'
+precision: '2571'
+restoration: '4539'
+vital: '1740'
+dominance: '96'
+skill: '60'
+origin: Magic
+movement: Flight
+gender: male
+personality: Powerful
+id: '562984316104460'
+:mentor: Superman
+---
