--- a/_members/Unathletic.yml
+++ b/_members/Unathletic.yml
@@ -1,21 +1,22 @@
 ---
-:name: Unathletic
-:curr_health: '3067'
-:curr_power: '1733'
-:health: '3067'
-:level: '9'
-:power: '1733'
-:defense: '1843'
-:tough: '0'
-:might: '1515'
-:precision: '285'
-:restoration: '1271'
-:vital: '0'
-:dominance: '14'
-:skill: '5'
-:origin: Tech
-:movement: Super-Speed
-:gender: male
-:personality: Comical
-:id: '562984316337370'
-:mentor: Batman
+name: Unathletic
+curr_health: '3067'
+curr_power: '1733'
+health: '3067'
+level: '9'
+power: '1733'
+defense: '1843'
+tough: '0'
+might: '1515'
+precision: '285'
+restoration: '1271'
+vital: '0'
+dominance: '14'
+skill: '5'
+origin: Tech
+movement: Super-Speed
+gender: male
+personality: Comical
+id: '562984316337370'
+:mentor: Superman
+---
