--- a/_members/VEGETA SUPERSAYAN.yml
+++ b/_members/VEGETA SUPERSAYAN.yml
@@ -1,21 +1,22 @@
 ---
-:name: VEGETA SUPERSAYAN
-:curr_health: '11673'
-:curr_power: '6134'
-:health: '11673'
-:level: '30'
-:power: '6134'
-:defense: '9474'
-:tough: '200'
-:might: '3909'
-:precision: '863'
-:restoration: '6431'
-:vital: '1183'
-:dominance: '107'
-:skill: '50'
-:origin: Meta
-:movement: Flight
-:gender: male
-:personality: Serious
-:id: '562962841023283'
+name: VEGETA SUPERSAYAN
+curr_health: '11673'
+curr_power: '6134'
+health: '11673'
+level: '30'
+power: '6134'
+defense: '9474'
+tough: '200'
+might: '3909'
+precision: '863'
+restoration: '6431'
+vital: '1183'
+dominance: '107'
+skill: '50'
+origin: Meta
+movement: Flight
+gender: male
+personality: Serious
+id: '562962841023283'
 :mentor: Superman
+---
