--- a/_members/Yung Travler.yml
+++ b/_members/Yung Travler.yml
@@ -1,21 +1,22 @@
 ---
-:name: Yung Travler
-:curr_health: '3442'
-:curr_power: '1993'
-:health: '3442'
-:level: '10'
-:power: '1993'
-:defense: '2366'
-:tough: '0'
-:might: '1882'
-:precision: '313'
-:restoration: '1387'
-:vital: '61'
-:dominance: '26'
-:skill: '7'
-:origin: Tech
-:movement: Flight
-:gender: male
-:personality: Serious
-:id: '562962841447320'
-:mentor: Batman
+name: Yung Travler
+curr_health: '3442'
+curr_power: '1993'
+health: '3442'
+level: '10'
+power: '1993'
+defense: '2366'
+tough: '0'
+might: '1882'
+precision: '313'
+restoration: '1387'
+vital: '61'
+dominance: '26'
+skill: '7'
+origin: Tech
+movement: Flight
+gender: male
+personality: Serious
+id: '562962841447320'
+:mentor: Superman
+---
