--- a/_members/CosmicMisfit.yml
+++ b/_members/CosmicMisfit.yml
@@ -1,21 +1,22 @@
 ---
-:name: CosmicMisfit
-:curr_health: '2489'
-:curr_power: '1493'
-:health: '2489'
-:level: '9'
-:power: '1493'
-:defense: '1311'
-:tough: '0'
-:might: '1257'
-:precision: '252'
-:restoration: '1139'
-:vital: '8'
-:dominance: '14'
-:skill: '5'
-:origin: Magic
-:movement: Flight
-:gender: male
-:personality: Powerful
-:id: '562980021089075'
-:mentor: Wonder Woman
+name: CosmicMisfit
+curr_health: '2489'
+curr_power: '1493'
+health: '2489'
+level: '9'
+power: '1493'
+defense: '1311'
+tough: '0'
+might: '1257'
+precision: '252'
+restoration: '1139'
+vital: '8'
+dominance: '14'
+skill: '5'
+origin: Magic
+movement: Flight
+gender: male
+personality: Powerful
+id: '562980021089075'
+:mentor: Superman
+---
