--- a/_members/Iatrogenic.yml
+++ b/_members/Iatrogenic.yml
@@ -1,21 +1,22 @@
 ---
-:name: Iatrogenic
-:curr_health: '15520'
-:curr_power: '4539'
-:health: '15520'
-:level: '30'
-:power: '4539'
-:defense: '14855'
-:tough: '0'
-:might: '6871'
-:precision: '2361'
-:restoration: '4643'
-:vital: '1736'
-:dominance: '516'
-:skill: '115'
-:origin: Magic
-:movement: Flight
-:gender: male
-:personality: Primal
-:id: '562971431077584'
-:mentor: Wonder Woman
+name: Iatrogenic
+curr_health: '15520'
+curr_power: '4539'
+health: '15520'
+level: '30'
+power: '4539'
+defense: '14855'
+tough: '0'
+might: '6871'
+precision: '2361'
+restoration: '4643'
+vital: '1736'
+dominance: '516'
+skill: '115'
+origin: Magic
+movement: Flight
+gender: male
+personality: Primal
+id: '562971431077584'
+:mentor: Superman
+---
