--- a/_members/Scotty LeBlanc.yml
+++ b/_members/Scotty LeBlanc.yml
@@ -1,21 +1,22 @@
 ---
-:name: Scotty LeBlanc
-:curr_health: '9104'
-:curr_power: '3699'
-:health: '9104'
-:level: '30'
-:power: '3699'
-:defense: '9055'
-:tough: '0'
-:might: '4983'
-:precision: '1662'
-:restoration: '3228'
-:vital: '1044'
-:dominance: '152'
-:skill: '44'
-:origin: Tech
-:movement: Flight
-:gender: male
-:personality: Comical
-:id: '562958545252055'
-:mentor: Batman
+name: Scotty LeBlanc
+curr_health: '9104'
+curr_power: '3699'
+health: '9104'
+level: '30'
+power: '3699'
+defense: '9055'
+tough: '0'
+might: '4983'
+precision: '1662'
+restoration: '3228'
+vital: '1044'
+dominance: '152'
+skill: '44'
+origin: Tech
+movement: Flight
+gender: male
+personality: Comical
+id: '562958545252055'
+:mentor: Superman
+---
