--- a/_members/Teen Gohan187.yml
+++ b/_members/Teen Gohan187.yml
@@ -1,21 +1,22 @@
 ---
-:name: Teen Gohan187
-:curr_health: '0'
-:curr_power: '9232'
-:health: '16849'
-:level: '30'
-:power: '9232'
-:defense: '14088'
-:tough: '320'
-:might: '5363'
-:precision: '1241'
-:restoration: '9711'
-:vital: '2098'
-:dominance: '208'
-:skill: '77'
-:origin: Meta
-:movement: Flight
-:gender: male
-:personality: Serious
-:id: '562949956059139'
+name: Teen Gohan187
+curr_health: '19012'
+curr_power: '7886'
+health: '19012'
+level: '30'
+power: '7886'
+defense: '12420'
+tough: '1530'
+might: '5317'
+precision: '1309'
+restoration: '8516'
+vital: '2003'
+dominance: '391'
+skill: '77'
+origin: Meta
+movement: Flight
+gender: male
+personality: Serious
+id: '562949956059139'
 :mentor: Superman
+---
