--- a/_members/toomee loomee.yml
+++ b/_members/toomee loomee.yml
@@ -1,21 +1,22 @@
 ---
-:name: toomee loomee
-:curr_health: '5246'
-:curr_power: '2445'
-:health: '5246'
-:level: '30'
-:power: '2445'
-:defense: '4377'
-:tough: '0'
-:might: '2570'
-:precision: '726'
-:restoration: '1919'
-:vital: '274'
-:dominance: '59'
-:skill: '30'
-:origin: Tech
-:movement: Acrobatics
-:gender: male
-:personality: Powerful
-:id: '562984316037515'
-:mentor: Batman
+name: toomee loomee
+curr_health: '5246'
+curr_power: '2445'
+health: '5246'
+level: '30'
+power: '2445'
+defense: '4377'
+tough: '0'
+might: '2570'
+precision: '726'
+restoration: '1919'
+vital: '274'
+dominance: '59'
+skill: '30'
+origin: Tech
+movement: Acrobatics
+gender: male
+personality: Powerful
+id: '562984316037515'
+:mentor: Superman
+---
