--- a/_members/Sasha Sprite.yml
+++ b/_members/Sasha Sprite.yml
@@ -1,6 +1,9 @@
 ---
 name: Sasha Sprite
+ability: Gadgets
 curr_health: '18695'
+cr: '18695'
+pvp: '18695'
 curr_power: '6866'
 health: '18695'
 level: '30'
@@ -18,5 +21,5 @@ movement: Acrobatics
 gender: female
 personality: Flirty
 id: '562980020912551'
-:mentor: Superman
+mentor: Batman
 ---
