--- a/_members/master ur.yml
+++ b/_members/master ur.yml
@@ -1,6 +1,9 @@
 ---
 name: master ur
+ability: Ice
 curr_health: '2853'
+cr: '2853'
+pvp: '2853'
 curr_power: '1365'
 health: '2853'
 level: '9'
@@ -18,5 +21,5 @@ movement: Acrobatics
 gender: female
 personality: Powerful
 id: '562980021235923'
-:mentor: Superman
+mentor: Superman
 ---
