--- a/_members/Emenius Sleepus.yml
+++ b/_members/Emenius Sleepus.yml
@@ -1,6 +1,9 @@
 ---
 name: Emenius Sleepus
+ability: Nature
 curr_health: '8764'
+cr: '8764'
+pvp: '8764'
 curr_power: '1344'
 health: '8764'
 level: '30'
@@ -18,5 +21,5 @@ movement: Super-Speed
 gender: male
 personality: Flirty
 id: '562975726340855'
-:mentor: Superman
+mentor: Wonder Woman
 ---
