--- a/_members/ExterminatingAngel.yml
+++ b/_members/ExterminatingAngel.yml
@@ -1,6 +1,9 @@
 ---
 name: ExterminatingAngel
+ability: Nature
 curr_health: '11193'
+cr: '11193'
+pvp: '11193'
 curr_power: '5684'
 health: '11193'
 level: '30'
@@ -18,5 +21,5 @@ movement: Flight
 gender: female
 personality: Flirty
 id: '562971431191039'
-:mentor: Superman
+mentor: Superman
 ---
