--- a/_members/Jickmind.yml
+++ b/_members/Jickmind.yml
@@ -1,6 +1,9 @@
 ---
 name: Jickmind
+ability: Mental
 curr_health: '1990'
+cr: '1990'
+pvp: '1990'
 curr_power: '1416'
 health: '1990'
 level: '9'
@@ -18,5 +21,5 @@ movement: Super-Speed
 gender: male
 personality: Comical
 id: '562958546453960'
-:mentor: Superman
+mentor: Superman
 ---
