--- a/_members/Motius.yml
+++ b/_members/Motius.yml
@@ -1,6 +1,9 @@
 ---
 name: Motius
+ability: Quantum
 curr_health: '28050'
+cr: '28050'
+pvp: '28050'
 curr_power: '3948'
 health: '28050'
 level: '30'
@@ -18,5 +21,5 @@ movement: Acrobatics
 gender: male
 personality: Comical
 id: '562971431023111'
-:mentor: Superman
+mentor: Batman
 ---
