--- a/_members/OGxSuperman.yml
+++ b/_members/OGxSuperman.yml
@@ -1,6 +1,9 @@
 ---
 name: OGxSuperman
+ability: Quantum
 curr_health: '4720'
+cr: '4720'
+pvp: '4720'
 curr_power: '3181'
 health: '4720'
 level: '27'
@@ -18,5 +21,5 @@ movement: Flight
 gender: male
 personality: Serious
 id: '562967136413310'
-:mentor: Superman
+mentor: Superman
 ---
