--- a/_members/PR GIRL23.yml
+++ b/_members/PR GIRL23.yml
@@ -1,6 +1,9 @@
 ---
 name: PR GIRL23
+ability: Nature
 curr_health: '0'
+cr: '0'
+pvp: '0'
 curr_power: '2513'
 health: '4368'
 level: '22'
@@ -18,5 +21,5 @@ movement: Super-Speed
 gender: female
 personality: Flirty
 id: '562949956522417'
-:mentor: Superman
+mentor: Superman
 ---
