--- a/_members/Scotty LeBlanc.yml
+++ b/_members/Scotty LeBlanc.yml
@@ -1,6 +1,9 @@
 ---
 name: Scotty LeBlanc
+ability: Rage
 curr_health: '9104'
+cr: '9104'
+pvp: '9104'
 curr_power: '3699'
 health: '9104'
 level: '30'
@@ -18,5 +21,5 @@ movement: Flight
 gender: male
 personality: Comical
 id: '562958545252055'
-:mentor: Superman
+mentor: Batman
 ---
