--- a/_members/Teen Gohan187.yml
+++ b/_members/Teen Gohan187.yml
@@ -1,6 +1,9 @@
 ---
 name: Teen Gohan187
+ability: Sorcery
 curr_health: '19012'
+cr: '19012'
+pvp: '19012'
 curr_power: '7886'
 health: '19012'
 level: '30'
@@ -18,5 +21,5 @@ movement: Flight
 gender: male
 personality: Serious
 id: '562949956059139'
-:mentor: Superman
+mentor: Superman
 ---
