--- a/_members/ToomTheSpeedster.yml
+++ b/_members/ToomTheSpeedster.yml
@@ -1,6 +1,9 @@
 ---
 name: ToomTheSpeedster
+ability: Nature
 curr_health: '5835'
+cr: '5835'
+pvp: '5835'
 curr_power: '2950'
 health: '5835'
 level: '30'
@@ -18,5 +21,5 @@ movement: Super-Speed
 gender: male
 personality: Comical
 id: '562984316194843'
-:mentor: Superman
+mentor: Superman
 ---
