--- a/_members/VEGETA SUPERSAYAN.yml
+++ b/_members/VEGETA SUPERSAYAN.yml
@@ -1,6 +1,9 @@
 ---
 name: VEGETA SUPERSAYAN
+ability: Electricity
 curr_health: '11673'
+cr: '11673'
+pvp: '11673'
 curr_power: '6134'
 health: '11673'
 level: '30'
@@ -18,5 +21,5 @@ movement: Flight
 gender: male
 personality: Serious
 id: '562962841023283'
-:mentor: Superman
+mentor: Superman
 ---
