--- a/_members/snowstorm21.yml
+++ b/_members/snowstorm21.yml
@@ -1,6 +1,9 @@
 ---
 name: snowstorm21
+ability: Ice
 curr_health: '3239'
+cr: '3239'
+pvp: '3239'
 curr_power: '1752'
 health: '3239'
 level: '12'
@@ -18,5 +21,5 @@ movement: Flight
 gender: male
 personality: Powerful
 id: '562949956515003'
-:mentor: Superman
+mentor: Batman
 ---
