--- a/_members/toomee loomee.yml
+++ b/_members/toomee loomee.yml
@@ -1,6 +1,9 @@
 ---
 name: toomee loomee
+ability: Fire
 curr_health: '5246'
+cr: '5246'
+pvp: '5246'
 curr_power: '2445'
 health: '5246'
 level: '30'
@@ -18,5 +21,5 @@ movement: Acrobatics
 gender: male
 personality: Powerful
 id: '562984316037515'
-:mentor: Superman
+mentor: Batman
 ---
